# opencv_librealsense

./: CMakeLists.txt  README.md  handSample.sln  opencv_librealsense.cpp  opencv_librealsense.sln  opencv_librealsense.vcxproj  sample.props  trash.cpp
